--- a/doc/specs/urbi-specs.tex
+++ b/doc/specs/urbi-specs.tex
@@ -399,7 +399,7 @@ and their equivalent are shown in \tab{durations}.
 \end{table}
 
 \subsubsection{Floats}
-\label{sect-syn-lit-flo}
+\label{sect:us-syn-lit-float}
 
 Literal floats consist in a succession of digit, representing the
 integral part of the number in decimal base, possibly followed by a
@@ -1144,9 +1144,13 @@ escape their declaration scope by lexical closure.
 \section{Channel}
 \section{Code}
 \section{Comparable}
+\label{sect:std-comparable}
 \section{Dictionary}
 \section{Event}
+
 \section{Float}
+\input{float.tex}
+
 \section{Group}
 \section{Integer}
 \section{Lazy}
@@ -1243,6 +1247,7 @@ and call messages. See example with call messages in
 \section{Lobby}
 \section{Object}
 \section{Orderable}
+\label{sect:std-orderable}
 \section{Pattern}
 \section{Primitive}
 \section{String}
