--- a/doc/specs/urbi-specs.tex
+++ b/doc/specs/urbi-specs.tex
@@ -416,6 +416,7 @@ is an example of literal floats.
 \end{lstlisting}
 
 \subsubsection{Lists}
+\label{sect:us-syn-lit-list}
 
 Literal lists are represented with a comma-separated, potentially
 empty list of arbitrary expressions enclosed in square brackets
@@ -1060,7 +1061,7 @@ in \lst{function-lazy}. More information about this can be found in
 the CallMessage class documentation (\sect{std-callmsg}).
 
 \begin{lstlisting}[caption=Lazy
-  function,label=lst:function-lazy,float=\floatpos]
+  function,label=lst:function-lazy,float=\floatposh]
   // Do not specify formal arguments, so as
   // effective arguments are not evaluated at call site
   function lazy
@@ -1244,6 +1245,8 @@ and call messages. See example with call messages in
 \sect{std-callmsg-examples-several}.
 
 \section{List}
+\input{list.tex}
+
 \section{Lobby}
 \section{Object}
 \section{Orderable}
