Fill flow control skeleton.
	* doc/specs/urbi-specs.tex: Here.

--- a/doc/specs/urbi-specs.tex
+++ b/doc/specs/urbi-specs.tex
@@ -1349,11 +1349,28 @@ Such message sending is illustrated by \lst{send-message}.
 \end{lstlisting}
 
 \FloatBarrier
-\section{Flow control}
+\section{Imperative flow control}
+
+\subsection{break}
+\subsection{continue}
+\subsection{do}
+\subsection{for (;;)}
+\subsection{for (:)}
+\subsection{for (n)}
+\subsection{if}
+\subsection{switch}
+\subsection{while}
+
 \FloatBarrier
-\section{Parallelism}
-\FloatBarrier
-\section{Events}
+\section{Parallel and event-based flow control}
+
+\subsection{at}
+\subsection{every}
+\subsection{for\& (:)}
+\subsection{for\& (n)}
+\subsection{waituntil}
+\subsection{whenever}
+
 \FloatBarrier
 \section{Pattern matching}
 \FloatBarrier
