--- a/doc/tutorial/urbi-tutorial.tex
+++ b/doc/tutorial/urbi-tutorial.tex
@@ -90,7 +90,7 @@
 \begin{document}
 
 \maketitle
-
+\tableofcontents
 \chapter{Introduction}
 
 Urbi is a programming language primarily designed for robotics. It's a
